# xnopay-task

./: Cargo.toml  README.md
src/: common.rs  db.rs  logging.rs  main.rs
src/resource/: controller.rs  mod.rs  service.rs
