[package]
name = "xnopay-task"
version = "0.1.0"
authors = ["Ajay Kumar <131ajay0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
chrono = "0.4.9"

actix-web = "2"
actix-rt = "1"

bson = "0.14.1"
mongodb = "0.9.2"

lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
